unpackaged/main/default/objects/FSL__CreateFilterEvent__e/FSL__CreateFilterEvent__e.object-meta.xml
<CustomObject>
    <label>Create Filter Event</label>
    <pluralLabel>Create Filter Events</pluralLabel>
</CustomObject>