unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__AppointmentListId__c.field-meta.xml
<CustomField>
    <fullName>FSL__AppointmentListId__c</fullName>
    <label>Appointment List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>