unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__Description__c.field-meta.xml
<CustomField>
    <fullName>FSL__Description__c</fullName>
    <label>Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>