unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__FilterCategory__c.field-meta.xml
<CustomField>
    <fullName>FSL__FilterCategory__c</fullName>
    <label>Filter Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>