unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__FilterName__c.field-meta.xml
<CustomField>
    <fullName>FSL__FilterName__c</fullName>
    <label>Filter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>