unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__LoadFilterImmediately__c.field-meta.xml
<CustomField>
    <fullName>FSL__LoadFilterImmediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Filter Immediately</label>
    <type>Checkbox</type>
</CustomField>