unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__ServiceApptIds__c.field-meta.xml
<CustomField>
    <fullName>FSL__ServiceApptIds__c</fullName>
    <label>Service Ids</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>