unpackaged/main/default/objects/FSL__CreateFilterEvent__e/fields/FSL__TerritoryIds__c.field-meta.xml
<CustomField>
    <fullName>FSL__TerritoryIds__c</fullName>
    <label>Territory Ids</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>